syntax = "proto3";

package pb;
option go_package = ".;pb";
import  "google/protobuf/timestamp.proto";



//The Airport service definition.
service AirportService {
 rpc CreateAirports    (CreateAirportsRequest   ) returns (CreateAirportsReply   );
 rpc DeleteAirports    (DeleteAirportsRequest   ) returns (DeleteAirportsReply   );
 rpc GetAirports       (GetAirportsRequest      ) returns (GetAirportsReply      );
 rpc ListAirports      (ListAirportsRequest     ) returns (ListAirportsReply     );
}

message Airport {
   string  airport_code = 1;
   string  airport_name = 2;
   string  country_code = 3;
   string  city = 4;
   string  coordinates = 5;
  google.protobuf.Timestamp  timezone = 6;
}


message CreateAirportsRequest {
  string  airport_code = 1;
   string  airport_name = 2;
   string  country_code = 3;
   string  city = 4;
   string  coordinates = 5;
   google.protobuf.Timestamp  timezone = 6;
}

message CreateAirportsReply {
  repeated Airport airport = 1;
}

message DeleteAirportsRequest {
  string  airport_code = 1;
}

message DeleteAirportsReply {
  Airport airport = 1;
}

message GetAirportsRequest {
    string  airport_code = 1;
}

message GetAirportsReply { 
  repeated Airport airport = 1;
  
}

message ListAirportsRequest {}

message ListAirportsReply {
  repeated Airport airport = 1;
}

