syntax = "proto3";

package pb;

option go_package = "github.com/niiniyare/awo/pkg/api/v1/pb";



import "google/protobuf/timestamp.proto";




message CreateAirlineRequest {
 optional   string name = 1;
 optional   string iata_code = 2;
 optional   string icao_code = 3;
 optional   string callsign = 4;
 optional   string country_code = 5;
 optional   string hub_Airport = 6;
 optional   string slug = 7;
 optional   Links  links = 8;
 
}

message Links {
 optional  string website = 7;
 optional  string twitter = 8;
 optional  string instagram = 9;
 optional  string linkedin = 10;


}

message ListAirlineRes {
      repeated AirlineRes AirlineRes = 1;
}

message ListAirlinesReq {
        int64 limit = 1;
        int64 offset = 2;
}
message CreateAirlineResponse {
      int64 id = 1;
      string name = 2;
      string iata_code = 3;
      string icao_code = 4;
      string callsign = 5;
      string country_code = 6;

}

message GetAirlineRequest {
  optional int64 id = 1;
  optional string name = 2;
  optional string iata_code = 3;  
  optional string icao_code = 4;
}
message GetAirlineResponse {
    int64 id = 1;
    string name = 2;
    string iata_code = 3;
    string icao_code = 4;
    string callsign = 5;
    string country_code = 6;
    string slug = 7;
}

message UpdateAirlineRequest {
  optional  int64 id = 1;
  optional  string name = 2;
  optional  string iata_code = 3;  
  optional string icao_code = 4;
}

message UpdateAirlineResponse {
    int64 id = 1;
    string name = 2;
    string iata_code = 3;
    string icao_code = 4;
    string callsign = 5;
    string country_code = 6;
    string slug = 7;
}

message DeleteAirlineRequest {
  optional  int64 id = 1;
  optional  string name = 2;
  optional  string iata_code = 3;  
  optional string icao_code = 4;
}

message AirlineRes {
           string name = 1;
           string iata_code = 2;
           string icao_code = 3;
           string callsign = 4;
           string country_code = 5;
           string hub_Airport = 6;
 optional   string slug = 7;
 optional   Links  links = 8;
    google.protobuf.Timestamp created_At = 9;
    google.protobuf.Timestamp updated_At = 10;
}

message DeleteAirlineResponse {
          int64 id = 1;
          string name = 2;
          string iata_code = 3;
          string icao_code = 4;
          string callsign = 5;
          string country_code = 6;
          string slug = 7;
}



/* message AirlineModelsPosibalePrams { */
/*     string name = 1; */
/*     string iata_code = 2; */
/*     uint32 iata_prefix = 3; */
/*     uint32 iata_accounting = 4; */
/*     string icao_code = 5; */
/*     string callsign = 6; */
/*     string country_code = 7; */
/*     uint32 iosa_registered = 8; */
/*     uint32 is_scheduled = 9; */
/*     uint32 is_passenger = 10; */
/*     uint32 is_cargo = 11; */
/*     uint32 is_international = 12; */
/*     uint32 total_aircrafts = 13; */
/*     uint32 average_fleet_age = 14; */
/*     uint32 accidents_last_5y = 15; */
/*     uint32 crashes_last_5y = 16; */
/*     string website = 17; */
/*     string facebook = 18; */
/*     string twitter = 19; */
/*     string instagram = 20; */
/*     string linkedin = 21; */
/*     string slug = 22; */
/* } */
/**/
/**/
